<?xml version="1.0" encoding="utf-8"?>

<!-- 
     This file is part of Trommelyd for Android.
     Copyright (C) Torkild Retvedt
     http://app.trommelyd.no/
 
     Trommelyd for Android is free software: you can redistribute it and/or
     modify it under the terms of the GNU General Public License as published
     by the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
     Trommelyd for Android is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
     Public License for more details.
 
     You should have received a copy of the GNU General Public License along
     with Trommelyd for Android. If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    
    <string name="app_name">Drumsound</string>

    <string name="sound_error">Ba-dom-tschh! Sorry, error during play :(</string>
    <string name="first_run">Now what?</string>
    <string name="url">http://markild.no/category/drumsound</string>

    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="preferences">Preferences</string>
    <string name="quit">Exit</string>
    <string name="info">Info</string>
    
    <string name="preference_category">Drumsound Preferences</string>
    <string name="preference_main">Main options</string>
    <string name="preference_behavior">Shake it!</string>
    
    <string name="preference_startup_title">Sound on focus</string>
    <string name="preference_startup_text">Play the "Drumsound" sound when application gets focus</string>
    
    <string name="preference_repeat_title">Repeatable sound</string>
    <string name="preference_repeat_text">If checked, sound can be restarted before it is completed</string>
    <string name="preference_delay_title">Delay</string>
    <string name="preference_delay_text">Delay before sound can be replayed</string>
    
    <string name="preference_muted_title">Play when muted</string>
    <string name="preference_muted_text">Play sound when device is in muted or vibrate mode</string>

    <string name="preference_volumeOverride_title">Override volume</string>
    <string name="preference_volumeOverride_text">Plays the "Drumsound" at a predefined volume</string>
    <string name="preference_volume_title">Volume</string>
    <string name="preference_volume_text">Overridden volume</string>
    
    <string name="preference_shake_title">Shake it!</string>
    <string name="preference_shake_text">Shake to play sound</string>
    <string name="preference_shake_error">Device does not support shake</string>    
    <string name="preference_sensitivity_title">Sensitivity</string>
    <string name="preference_sensitivity_text">Shake sensitivity</string>
    
    <string name="preference_appearance">Appearance</string>
    <string name="preference_appearance_status_title">Show status bar</string>
    <string name="preference_appearance_status_text">If checked, status bar is visible</string>
    <string name="preference_appearance_orientation_title">Orientation</string>
    <string name="preference_appearance_orientation_text">Choose default orientation</string>
    
    <string name="preference_saved">Preferences saved</string>
    <string name="sound_played">Times played</string>

    <string name="snare_drum">Snare drum</string>
    <string name="stick">Stick</string>
</resources>
