<?xml version="1.0" encoding="utf-8"?>

<!-- 
     This file is part of Trommelyd for Android.
     Copyright (C) Torkild Retvedt
     http://app.trommelyd.no/
 
     Trommelyd for Android is free software: you can redistribute it and/or
     modify it under the terms of the GNU General Public License as published
     by the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
     Trommelyd for Android is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
     Public License for more details.
 
     You should have received a copy of the GNU General Public License along
     with Trommelyd for Android. If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/preference_category">

    <PreferenceCategory
            android:title="@string/preference_main">
        
	    <CheckBoxPreference
	            android:key="startup"
	            android:title="@string/preference_startup_title"
	            android:summary="@string/preference_startup_text"
	            android:defaultValue="false" />
	
	    <CheckBoxPreference
	            android:key="repeat"
	            android:title="@string/preference_repeat_title"
	            android:summary="@string/preference_repeat_text"
	            android:defaultValue="true" />
	
        <com.hlidskialf.android.preference.SeekBarPreference
                android:key="delay"
                android:title="@string/preference_delay_title"
                android:summary="@string/preference_delay_text"
                android:text=" ms"
                min="100"
                android:max="1500"
                android:defaultValue="500"
                android:dependency="repeat" />
                
	    <CheckBoxPreference
	            android:key="muted"
	            android:title="@string/preference_muted_title"
	            android:summary="@string/preference_muted_text"
	            android:defaultValue="true" />
    
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preference_behavior">
        
	    <CheckBoxPreference
	            android:key="shake"
	            android:title="@string/preference_shake_title"
	            android:summary="@string/preference_shake_text"
	            android:defaultValue="true" />
	
        <com.hlidskialf.android.preference.SeekBarPreference
                android:key="sensitivity"
                android:title="@string/preference_sensitivity_title"
                android:summary="@string/preference_sensitivity_text"
                min="0"
                android:max="100"
                android:defaultValue="50"
                android:dependency="shake" />
                
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/preference_appearance">
        
        <CheckBoxPreference
                android:key="statusbar"
                android:title="@string/preference_appearance_status_title"
                android:summary="@string/preference_appearance_status_text"
                android:defaultValue="true" />
                
        <ListPreference
                android:key="orientation"
                android:title="@string/preference_appearance_orientation_title"    
                android:summary="@string/preference_appearance_orientation_text"
                android:entries="@array/orientation_titles"
                android:entryValues="@array/orientation_values"
                android:defaultValue="default" />
                
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/info">
            
        <PreferenceScreen
                android:key="version_info" />    
            
    </PreferenceCategory>
               
</PreferenceScreen>
